# codingtest

./: .coverage  .gitignore  .travis.yml  Dockerfile  README.md  metadata.json  pyproject.toml
cicd/unittests/: Dockerfile
scripts/: build.sh  generate.py  local_build.sh  local_tests.sh  run_container.sh  run_local_unit_tests.sh  unittest.sh
src/api/: app.py  entrypoint.sh  environment.py
src/api/loghandler/: logger.py
tests/: test_app_test.py
