[tool.poetry]
license = ""
name = "api"
version = "0.0.0"
description = ""
authors = ["Daniel Sanders"]

[tool.poetry.dependencies]
python = "^3.7"
jsonify = "^0.5"
Flask = "^1.1.2"
python-json-logger = "^0.1.11"


[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
mock = "^4.0.2"
jinja2 = "^2.11.2"


[tool.black]
line-length = 79
target_version = ['py37']
skip-string-normalization = true
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


